# Flam_assignment

./: README.md  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/opencvtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/opencvtest/: MainActivity.kt
app/src/main/java/com/opencvtest/gl/: EdgeRenderer.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/opencvtest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
web/: app.js  app.ts  index.html  package-lock.json  package.json
